# crypto-lakehouse

./: .env.example  .gitignore  .vercelignore  Makefile  README.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: backtest.yml  gitleaks.yml  refresh-data.yml
api/: index.py
backend/app/: main.py
backend/app/api/: routes_analytics.py  routes_assets.py  routes_assistant.py  routes_backtest.py  routes_health.py  routes_market_data.py  routes_polling.py  routes_portfolio.py  routes_predictions.py  routes_quality.py
backend/app/assistant/: ollama_client.py  schema_context.py  sql_guard.py  templates.py
backend/app/core/: config.py  logging.py  polling.py  rate_limiter.py
backend/app/data/: backtest.py  binance_client.py  bronze_writer.py  duckdb_repo.py  gold_metrics.py  lake_paths.py  predictions.py  quality_checks.py  retention.py  seed_portfolio.py  silver_transform.py
backend/app/ml/: kronos_loader.py
backend/app/ml/kronos/: NOTICE  __init__.py  kronos.py
backend/app/models/: api_models.py
backend/tests/: test_backtest.py  test_backtest_api.py  test_gold_metrics.py  test_ingest_fallback.py  test_predictions.py  test_quality_checks.py  test_silver_transform.py  test_sql_guard.py
data/lakehouse/gold/asset_backtest_forecasts/: asset_backtest_forecasts.parquet
data/lakehouse/gold/asset_backtest_horizon/: asset_backtest_horizon.parquet
data/lakehouse/gold/asset_backtest_metrics/: asset_backtest_metrics.parquet
data/lakehouse/gold/asset_daily_metrics/: asset_daily_metrics.parquet
data/lakehouse/gold/asset_intraday_metrics/: asset_intraday_metrics.parquet
data/lakehouse/gold/asset_price_predictions/: asset_price_predictions.parquet
data/lakehouse/gold/data_quality_breaks/: data_quality_breaks.parquet
data/lakehouse/gold/portfolio_exposures/: portfolio_exposures.parquet
data/lakehouse/gold/portfolio_positions/: portfolio_positions.parquet
data/lakehouse/silver/market_candles/source=binance/symbol=BTCUSDT/interval=1d/date=2026-06-06/: candles.parquet
data/lakehouse/silver/market_candles/source=binance/symbol=BTCUSDT/interval=1d/date=2026-06-07/: candles.parquet
data/lakehouse/silver/market_candles/source=binance/symbol=BTCUSDT/interval=1d/date=2026-06-08/: candles.parquet
data/lakehouse/silver/market_candles/source=binance/symbol=BTCUSDT/interval=1d/date=2026-06-09/: candles.parquet
docs/: FREE_COMPONENTS.md  azure-architecture.md
docs/superpowers/plans/: 2026-06-06-backtesting-accuracy.md  2026-06-06-phase1-proof-engine.md
docs/superpowers/specs/: 2026-06-06-backtesting-accuracy-design.md  2026-06-06-monetization-design.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  refresh.tsx  theme.tsx
frontend/src/api/: client.ts
frontend/src/components/: AssetChart.tsx  AssistantBubble.tsx  AssistantPanel.tsx  BacktestStrip.tsx  CoinIcon.tsx  DashboardLayout.tsx  MarketOverview.tsx  PortfolioExposure.tsx  QualityBreaks.tsx  TabbedPanel.tsx  TickerBar.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/styles/: index.css
scripts/: build_backtest.py  build_gold.py  build_predictions.py  build_silver.py  generate_synthetic_data.py  ingest_market_data.py  run_quality_checks.py  seed_demo_data.py  sweep_backtest.py
(+584 files in other folders)
