[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-lakehouse"
version = "0.1.0"
description = "AI-Native Crypto Trading Data Lakehouse - Local-first portfolio project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "duckdb>=1.1.0",
    "polars>=1.10.0",
    "pyarrow>=17.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
]
# Price forecasting (Kronos). Heavy + not needed for the base API/serving path,
# so kept optional. Enable with: pip install -e ".[predict]"
predict = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "einops>=0.8.0",
    "huggingface_hub>=0.33.0",
    "safetensors>=0.6.0",
    "tqdm>=4.66",
]

[tool.setuptools]
packages = ["backend", "backend.app", "backend.app.api", "backend.app.core", "backend.app.data", "backend.app.assistant", "backend.app.models", "backend.app.ml", "backend.app.ml.kronos", "backend.tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.vercel]
entrypoint = "backend.app.main:app"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
